fix the overflow issue

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,6 +2,10 @@
   font-family: "Roboto", sans-serif;
 }
 
+html {
+  overflow-x: hidden;
+}
+
 body {
   background-color: rgb(234, 233, 237);
   overflow-x: hidden;
